--- a/portal/exercise_diet/static/css/styles.css
+++ b/portal/exercise_diet/static/css/styles.css
@@ -42,9 +42,9 @@
     max-width: 740px;
 }
 hr.objective {
-	margin: 10px auto 30px; 
-	padding: 0px 0px 0px 0px; 
-	
+	margin: 10px auto 30px;
+	padding: 0px 0px 0px 0px;
+
 	background: rgba(255, 255, 255, 0.5);
     display: block;
     height: .05px;
@@ -85,7 +85,7 @@ hr.objective {
     padding: 25px;
     width: 250px;
     margin-top: 40px;
-    
+
     position: absolute;
     top: 75%;
     left: 50%;
@@ -153,7 +153,7 @@ hr.objective {
     font-size: 26px;
     line-height: 1.3em;
 	letter-spacing: .03em;
-    text-align: left;    
+    text-align: left;
     background-image: url('../img/white-triangle-bullet.png');
     background-repeat: no-repeat;
     background-position: left 10px;
@@ -283,7 +283,7 @@ img.video-testimonial-hero {
 	margin: 0px auto;
 	z-index: 0;
 	text-align: center;
-	
+
 	position: absolute;
     display: block;
 /*     background-image: url('../img/objective-background.jpg'); */
@@ -455,7 +455,7 @@ ul.intro-li li {
 	text-align: center;
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: space-between;	
+	justify-content: space-between;
 }
 .modal-nav span {
 	height: auto;
@@ -515,8 +515,8 @@ h2 a {
 	position: relative;
 	margin: 20px auto 100px;
 	padding: 0px;
-	max-width: 628px; 
-}				
+	max-width: 628px;
+}
 
 .healthy-fats-accordion, .vegetables-accordion, .tomatoes-accordion, .fish-accordion, .alternatives-accordion {
 	position: relative;
@@ -571,7 +571,7 @@ h2 a {
 	border-bottom-right-radius: 3px;
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
-	
+
 }
 .collapse.in {
 	padding: 20px 20px 10px;
@@ -594,7 +594,7 @@ h2 a {
     letter-spacing: .01em;
     font-style: normal;
     color: #5e7c38;
-    
+
     text-align: center;
     vertical-align: middle;
     margin: 0px 2px 3px;
@@ -610,7 +610,7 @@ h2 a {
     letter-spacing: .01em;
     font-style: normal;
     color: #5e7c38;
-    
+
     text-align: center;
     vertical-align: middle;
     margin: 0px 2px 3px;
@@ -1013,7 +1013,7 @@ body {
 	background-color: #fff;
 	font-family: Helvetica, Arial, sans-serif;
 }
-	
+
 .row-hover {
 	background-color: rgba(205, 229, 190, 0.2);
 }
@@ -1038,7 +1038,7 @@ a:hover, a:focus {
 	outline-offset: none;
 }
 */
-.container {    
+.container {
 	position: relative;
     max-width: 1000px;
     min-width: 320px;
@@ -1083,7 +1083,7 @@ a:hover, a:focus {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling: touch;
-    
+
     display: block; /* override bootstrap .collapse */
     margin-right: 0px;
     margin-left: 0px;
@@ -1093,7 +1093,7 @@ b, strong {
 	font-weight: 600;
 	letter-spacing: .01em;
 }
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	padding: 0px;
     margin: 0px auto;
@@ -1300,7 +1300,7 @@ h3 a:hover {
     color: #fff;
     background: #5e7c38;
     border: none;
-    
+
     margin: 10px auto 20px;
 	height: 2.2em;
 	text-transform: uppercase;
@@ -1317,7 +1317,7 @@ h3 a:hover {
     color: #fff;
     background: #435928;
     border: none;
-    
+
     margin: 10px auto 20px;
 	height: 2.2em;
 	text-transform: uppercase;
@@ -1469,7 +1469,7 @@ h3 a:hover {
 }
 #supplements .modal-footer .btn-secondary span {
     font-weight: 500;
-    color: #fff;               
+    color: #fff;
     background-color: #5f7783;
     border: none;
     border-radius: 15px;
@@ -2044,7 +2044,7 @@ h3 a:hover {
 	font-size: 13px;
 	padding: .3em .5em .2em;
 }
-	
+
 /*               		#fish .modal-body button.btn.btn-secondary-top b					*/
 /* ======================================================================================== */
 /* ======================================================================================== */
@@ -2763,7 +2763,7 @@ div#exercise-trainer.modal.fade.in h2 {
     padding: 5px 10px 5px;
     margin: -36px -15px 15px -15px;
     display: block;
-    min-height: 35px;	
+    min-height: 35px;
 }
 
 div#nutrition-resources.modal.fade.in h2 {
@@ -2778,7 +2778,7 @@ div#nutrition-resources.modal.fade.in h2 {
     margin: -36px -15px 15px -15px;
     display: block;
     min-height: 35px;
-    z-index: 0;	
+    z-index: 0;
 }
 
 
@@ -2802,7 +2802,7 @@ td {
 	padding: 4px 4px;
 	vertical-align: top;
 	border: 1px solid #5e7c38;
-	line-height: 1.3em; 
+	line-height: 1.3em;
 }
 
 tr {
@@ -5102,9 +5102,39 @@ div#recipe-modal .modal-body button.btn.btn-secondary-top span:hover {
 	padding: .3em .5em .2em;
 }
 
+:not(.is-scrolled) .theme--intro-light .logo {
+    color: black;
+    background-image: url(../img/logo-base.png);
+}
+main .module-assets {
+    overflow: auto;
+}
+
+h3.module__head {
+    color: #FFF;
+}
 
 
-/* Bootstrap breakpoints 
+#ED-Intro,
+#ED-Exercise,
+#ED-Diet {
+    overflow: hidden;
+}
+
+#ED-Intro {
+    height: 90em;
+}
+
+#ED-Exercise {
+    height: 140em;
+}
+
+#ED-Diet {
+    height: 135em;
+}
+
+
+/* Bootstrap breakpoints
 /* ======================================================================================== */
 /* ======================================================================================== */
 /* ======================================================================================== */
@@ -5118,7 +5148,7 @@ div#recipe-modal .modal-body button.btn.btn-secondary-top span:hover {
 	max-width: 768px;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
@@ -5127,7 +5157,7 @@ div#recipe-modal .modal-body button.btn.btn-secondary-top span:hover {
 
 
 }
-/* Bootstrap breakpoint 
+/* Bootstrap breakpoint
 /* ======================================================================================== */
 /* ======================================================================================== */
 
@@ -5138,7 +5168,7 @@ div#recipe-modal .modal-body button.btn.btn-secondary-top span:hover {
 	max-width: 768px;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
@@ -5147,7 +5177,7 @@ div#recipe-modal .modal-body button.btn.btn-secondary-top span:hover {
 
 }
 
-/* Bootstrap breakpoint 
+/* Bootstrap breakpoint
 /* ======================================================================================== */
 /* ======================================================================================== */
 
@@ -5160,11 +5190,24 @@ div#recipe-modal .modal-body button.btn.btn-secondary-top span:hover {
 	width: 100%;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
+    overflow: auto;
 /* 	max-width: 768px; */
+}
+
+#ED-Intro {
+    height: 90em;
+}
+
+#ED-Exercise {
+    height: 115em;
+}
+
+#ED-Diet {
+    height: 135em;
 }
 
 .navbar-toggle {
@@ -5204,8 +5247,8 @@ div#recipe-modal .modal-body button.btn.btn-secondary-top span:hover {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling: touch;
-    
-    display: block; 
+
+    display: block;
     margin-right: 0px;
     margin-left: 0px;
 }
@@ -5312,7 +5355,7 @@ table {
 	width: 100%;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
@@ -5360,7 +5403,7 @@ table {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling: touch;
-    
+
     display: block; /* override bootstrap .collapse */
     margin-right: 0px;
     margin-left: 0px;
@@ -5469,7 +5512,7 @@ table {
 	width: 100%;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
@@ -5517,7 +5560,7 @@ table {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling: touch;
-    
+
     display: block; /* override bootstrap .collapse */
     margin-right: 0px;
     margin-left: 0px;
@@ -5622,7 +5665,7 @@ table {
 	width: 100%;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
@@ -5644,7 +5687,7 @@ table {
     height: 50px;
     text-align: center;
     padding: 5px 25px 5px 25px;
-    
+
     align-items: center;
 }
 
@@ -5665,9 +5708,9 @@ table {
     padding-left: 0px;
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-    
+
     -webkit-overflow-scrolling: touch;
-    display: block; 
+    display: block;
     margin-right: 0px;
     margin-left: 0px;
 }
@@ -5758,9 +5801,6 @@ table {
 
 }
 
-
-
-
 /* Breakpoints > (max-width: 640px) */
 /* ======================================================================================== */
 /* ======================================================================================== */
@@ -5778,7 +5818,7 @@ table {
     display: none;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
@@ -5819,7 +5859,7 @@ table {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling: touch;
-    
+
     display: block; /* override bootstrap .collapse */
     margin-right: 0px;
     margin-left: 0px;
@@ -5909,12 +5949,6 @@ table {
 }
 
 }
-
-
-
-
-
-
 
 /* MORE MEDIA QUERIES */
 /* ======================================================================================== */
@@ -6004,10 +6038,10 @@ table {
     text-shadow: 1px 1px #000;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
-	padding: 0;
+	padding: 0 0.1em;
 	max-width: 768px;
 }
 
@@ -6045,7 +6079,7 @@ table {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling: touch;
-    
+
     display: block; /* override bootstrap .collapse */
     margin-right: 0px;
     margin-left: 0px;
@@ -6121,7 +6155,7 @@ table {
     text-shadow: 1px 1px #000;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
@@ -6161,7 +6195,7 @@ table {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling: touch;
-    
+
     display: block; /* override bootstrap .collapse */
     margin-right: 0px;
     margin-left: 0px;
@@ -6218,7 +6252,7 @@ table {
     text-shadow: 1px 1px #000;
 }
 
-#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes { 
+#ED-Intro, #ED-Exercise, #ED-Diet, #ED-Recipes {
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
@@ -6259,7 +6293,7 @@ table {
     border-top: 1px solid transparent;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     -webkit-overflow-scrolling: touch;
-    
+
     display: block; /* override bootstrap .collapse */
     margin-right: 0px;
     margin-left: 0px;
