--- a/portal/exercise_diet/templates/exercise_diet/recipes.html
+++ b/portal/exercise_diet/templates/exercise_diet/recipes.html
@@ -120,7 +120,10 @@
             </table>
         </div><!-- END class="alternatives-accordion" -->
     </div><!-- END id="Recipe-Accordions"> -->
-
+</main>
+{% endblock %}
+{% block modal %}
+    {{super()}}
     <!-- Modal -->
     <div class="modal fade" id="recipe-modal" aria-hidden="true">
         <div class="modal-dialog">
@@ -130,6 +133,4 @@
             </div>
         </div>
     </div>
-
-</main>
 {% endblock %}
