--- a/portal/exercise_diet/templates/exercise_diet/base.html
+++ b/portal/exercise_diet/templates/exercise_diet/base.html
@@ -13,8 +13,9 @@
     <div class="page-intro">
         <div class="page-intro__content">
             <div class="navbar-header">
+                {% trans %}
                 <button class="navbar-toggle collapsed" data-target="#mainNavbar" data-toggle="collapse" type="type">Show TrueNTH USA Exercise and Diet Links</button>
-
+                {% endtrans %}
             </div>
             <div class="navbar-collapse collapse" id="mainNavbar">
                 <ul class="nav navbar-nav">
