TN-551 extracting in-line JS from profile template files, part2, cleanups

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -280,7 +280,7 @@ a.btn {
     position: relative;
     margin-bottom: 1px;
     width: 100%;
-    overflow: hidden;
+    max-width: 100%;
   }
   input.tab-input {
     position: absolute;
@@ -2677,7 +2677,7 @@ div.timezone-warning.text-warning {
   }
   #createProfileForm[data-account='staff'] {
     #bdGroup {
-      height: 80px;
+      height: 120px;
     }
   }
 }
