--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
-{% from "profile_macros.html" import profileProcedures %}
+{% from "profile/profile_macros.html" import profileProcedures %}
 
 <h3 class="tnth-headline">{{ _("More About You") }}</h3>
 
