--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% from "flask_user/_macros.html" import back_btn, footer %}
 {% block main %}
-{% from "profile_macros.html" import profileName, profileBirthDate, profilePhone, profileAltPhone, profileSaveBtn%}
+{% from "profile/profile_macros.html" import profileName, profileBirthDate, profilePhone, profileAltPhone, profileSaveBtn%}
 {% from "initial_queries_macros.html" import consent_fields %}
 <br/>
 <form id="createProfileForm" data-account="staff" class="form tnth-form to-validate">
@@ -73,5 +73,7 @@
     $(function () {
         /*** need to run this instead of the one function from main.js because we don't want to pre-check any org here ***/
         aco.getOrgs(aco.populateStaffOrgs);
+        var profileObj = new Profile("", "{{user.id}}");
+        profileObj.initSection("demo");
     });
 {% endblock %}
