--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -6,6 +6,7 @@
 <br/>
 <form id="createProfileForm" data-account="staff" class="form tnth-form to-validate">
     <input type="hidden" id="current_user_email" value="{{user.email}}" />
+    <input type="hidden" id="currentStaffUserId" value="{{user.id}}" />
     <div class="row">
         <div class="col-md-11">
             <div class="row">
@@ -73,7 +74,7 @@
     $(function () {
         /*** need to run this instead of the one function from main.js because we don't want to pre-check any org here ***/
         aco.getOrgs(aco.populateStaffOrgs);
-        var profileObj = new Profile("", "{{user.id}}");
+        var profileObj = new Profile("", $("#currentStaffUserId").val());
         profileObj.initSection("demo");
     });
 {% endblock %}
