--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -59,6 +59,13 @@
 <style>#tnthNavXs .tnth-nav-btn{ display: none; }</style>
 {% endif %}
 {% if config["SYSTEM_TYPE"].lower() != "production" %}<div class='watermark'>TRUE<sup>NTH</sup> - {{config.SYSTEM_TYPE}} version - Not for study or clinical use</div>{% endif %}
+{% if user and not user.has_role(ROLE.WRITE_ONLY) %}
+    <div id="notificationBanner">
+        <input type="hidden" id="notificationUserId" value="{{user.id}}" />
+        <div class="content"></div>
+        <span class="close" title="{{_('dismiss')}}">X</span>
+    </div>
+{% endif %}
 <div id="tnthNavWrapper">
     <div id="tnthNavMain">
         <div id="tnthNavMainContainer">
