--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -75,6 +75,6 @@
         /*** need to run this instead of the one function from main.js because we don't want to pre-check any org here ***/
         aco.getOrgs(aco.populateStaffOrgs);
         var profileObj = new Profile("", $("#currentStaffUserId").val());
-        profileObj.initSection("demo");
+        profileObj.initSections();
     });
 {% endblock %}
