--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -101,8 +101,8 @@
 <script src="https://cdn.rawgit.com/myadzel/6405e60256df579eda8c/raw/e24a756e168cb82d0798685fd3069a75f191783f/alphanum.js"></script>
 <script src="{{ url_for('static', filename='js/i18next-config.js') }}"></script>
 <script src="{{ url_for('static', filename='js/utility.js') }}"></script>
-<script src="{{ url_for('static', filename='js/validator.js') }}"></script>
-<script src="{{ url_for('static', filename='js/bootstrap.rowlink.js') }}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.9.0/validator.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
 <!-- polyfill code for Promise -->
 <script href="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.min.js"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
