fix text overflow issue for edit button in profile

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1663,7 +1663,9 @@ div.footer-wrapper.right-panel {
     margin-right: 1em;
     z-index: 10;
     height: 2.5em;
-    width: 70px;
+    width: auto;
+    outline: 0;
+    white-space: nowrap;
     padding: 0 0.7em;
     color: #FFF;
     background: @btnColor;
@@ -1676,17 +1678,6 @@ div.footer-wrapper.right-panel {
   .profile-item-edit-btn:focus {
     color: #FFF;
     background-color: @linkHover;
-  }
-  .profile-item-edit-btn::before {
-    content: attr(data-text);
-    position: absolute;
-    top: 0.5em;
-    left: 0;
-    bottom: 0;
-    right: 0;
-  }
-  .profile-item-container.edit .profile-item-edit-btn::before {
-    content: attr(data-text);
   }
   .profile-item-container .edit-container {
     display: none;
