--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -690,6 +690,7 @@
         <label>Time Zone</label>
         <select class="form-control" id="profileTimeZone" data-save-container-id="profileTimeZoneGroup">
             <option value="UTC">-- Select --</option>
+             <option value="America/Chicago">{{_("America/Chicago")}}</option>
             <option value="America/Denver">{{_("America/Denver")}}</option>
             <option value="America/Los_Angeles">{{_("America/Los Angeles")}}</option>
             <option value="America/Indianapolis">{{_("America/Indianapolis")}}</option>
