TN-504 followup fix - add European timezones

--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -715,6 +715,14 @@
             <option value="Australia/Victoria">{{_("Australia/Victoria")}}</option>
             <option value="Australia/West">{{_("Australia/West")}}</option>
             <option value="Australia/Yancowinna">{{_("Australia/Yancowinna")}}</option>
+            <option value="Europe/Andorra">{{_("Europe/Andorra")}}</option>
+            <option value="Europe/Vienna">{{_("Europe/Vienna")}}</option>
+            <option value="Europe/Brussels">{{_("Europe/Brussels")}}</option>
+            <option value="Europe/Andorra">{{_("Europe/Andorra")}}</option>
+            <option value="Europe/Stockholm">{{_("Europe/Stockholm")}}</option>
+            <option value="Europe/Sofia">{{_("Europe/Sofia")}}</option>
+            <option value="Europe/Zurich">{{_("Europe/Zurich")}}</option>
+
         </select>
     </div>
     <div class="timezone-warning"></div>
